--- a/deploy.conf
+++ b/deploy.conf
@@ -11,12 +11,12 @@ ORGANIZATION_NAME='MINTPRESSO'
 USER_NAME='Jinhyuk Lee'
 
 SERVER_NAME='trinity.so (IDC)'
-SERVER_HOST='trinity.so'
+SERVER_HOST='mstock.org'
 SERVER_USER='mintpresso'
 
 # without slash '/' at the end
-RSYNC_OPTIONS='4092'
+RSYNC_OPTIONS='--bwlimit=4092'
 BASE_DIR='/home/mintpresso/playframework'
 DEPLOY_BEFORE=''
-PLAY_OPTIONS='-Dconfig.file=../production.conf'
+PLAY_OPTIONS='-Dconfig.file=../production.conf -DapplyEvolutions.default=true'
 DEPLOY_AFTER=""
