--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,4 @@
-application.secret="Qub5JsaB5UF1m/lMThY[Re>^q3sID?fVE1j?loO3ytMRmmoTATjh8ae2fLdASrE>"
+application.secret="/of3u9_T[qTsCe6f>48pQtJJxyPVpkmB[OZU7`QFO5;_EeP^2=7c3L5cRtMwPvo0"
 application.langs="en"
 application.global=Global
 
