--- a/deploy.conf
+++ b/deploy.conf
@@ -18,5 +18,5 @@ SERVER_USER='mintpresso'
 RSYNC_OPTIONS='--bwlimit=4092'
 BASE_DIR='/home/mintpresso/playframework'
 DEPLOY_BEFORE=''
-PLAY_OPTIONS='-Dconfig.file=../production.conf -DapplyEvolutions.default=true'
+PLAY_OPTIONS='-Dconfig.file=../production.conf'
 DEPLOY_AFTER=""
